--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "tsx script/build.ts",
+   
+    "build": "tsx script/build.js",
     "start": "NODE_ENV=production node dist/index.cjs"
     
   },
