--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "build": "tsx script/build.js",
+    "dev":"NODE_ENV=development node server/index.ts",
+    "build": "node script/build.js",
     "start": "NODE_ENV=production node dist/index.cjs"
   },
   "dependencies": {
