--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,29 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
-    "rootDir": ".",
-    "outDir": "dist",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": false,
+    "target": "ES2022",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "lib": ["ES2022", "DOM"],
+    "jsx": "react-jsx",
+
+    "strict": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+
+    "allowImportingTsExtensions": true,
+    "isolatedModules": true,
+    "noEmit": true,
+
+    "types": ["node"]
   },
-  "include": ["server/**/*", "shared/**/*"],
-  "exclude": ["node_modules", "client", "script"]
+
+  "include": [
+    "client",
+    "server",
+    "script",
+    "shared",
+    "vite.config.ts"
+  ]
 }
